Ensure openssl is usable.
Fixes #11.

--- a/clrtrust.in
+++ b/clrtrust.in
@@ -17,6 +17,30 @@ has_openssl() {
         1>&2 echo "openssl is required, but not found."
         return 1
     fi
+    # make sure openssl can handle a valid root CA (here-doc below)
+    cat <<EOF | openssl x509 -noout || return 1
+-----BEGIN CERTIFICATE-----
+MIIDaTCCAlGgAwIBAgIJAK0VsP61l6TgMA0GCSqGSIb3DQEBCwUAMEsxCzAJBgNV
+BAYTAlVTMQswCQYDVQQIDAJDQTEUMBIGA1UEBwwLU2FudGEgQ2xhcmExGTAXBgNV
+BAMMEFRlc3QgQ2VydGlmaWNhdGUwHhcNMTgxMDEwMDAwNzUwWhcNMTgxMTA5MDAw
+NzUwWjBLMQswCQYDVQQGEwJVUzELMAkGA1UECAwCQ0ExFDASBgNVBAcMC1NhbnRh
+IENsYXJhMRkwFwYDVQQDDBBUZXN0IENlcnRpZmljYXRlMIIBIjANBgkqhkiG9w0B
+AQEFAAOCAQ8AMIIBCgKCAQEA0wDgZS61TSfY0YU3bCunckRi0MFWsNuNJo2kmOJW
+cj81ZgD2tE7P0BhhxcDvHZqeGVmFaI+pt3++8jyMrWQ9OYZFc5SAaVjb4E/uSOPv
+6pL6qBKaJ+GYLDzC4bTq3NNxmddU2GdIVKJ6H/S8aCnHXUHx5edJh4/q2SLNighf
+mUDBCdi6IFxOR4GQTA/Q7Hvo2yaQMjkk9mNXQU7QSu9z29rZmF5y04eSoHJsfoDi
+u/svc9y2nbZbD8aGHkRN/zMTgUIZNyaYskbDzOCFMvZxABdX9o427xbdO32Ut3Q8
+kpEvhypg+UrWksau2rGMUBgOH+ikvkVSHDoRTKy5VbtGPwIDAQABo1AwTjAdBgNV
+HQ4EFgQUISRI0A9td2nZrDxecbvnQD4pZRgwHwYDVR0jBBgwFoAUISRI0A9td2nZ
+rDxecbvnQD4pZRgwDAYDVR0TBAUwAwEB/zANBgkqhkiG9w0BAQsFAAOCAQEAehIj
+FTPWQDsTAdx//FxE7gKxInlHVKk/RMICeLQX9pEHCDycS9GLsgzhoM9wpaU6XTT1
+hq4A9An0RPp+tAjo/ljalwUfqKgDCe4ZauZ4SYmpJbWwcg1nb+HPRMbmL9M1WnQ6
+sxnMqXuHRXnVakgpcYO/CUT4aRO+iMjwaaaCULLfthAhdPXPzUyT/Zzd6h5vd65J
+sa75/xYFkv759QhbmCfoLUDEFH/8jM3Nzk6aN3DuxBNYxc6HqKu2qdFTa4wESflP
+iwjplcjBGnhTUJcAvlXR4JkwFSPalDhRJaXJZB1NwTBCTasvu3dQNtiZNLgFcfw8
+A5YnQ260LtWD4nmvqA==
+-----END CERTIFICATE-----
+EOF
     return 0
 }
 
